--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@
   stroke-opacity: 75%;
 }
 
+body {
+     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+        font-weight: 300;
+      }
