make the example not terrible on firefox

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 }
 
 body {
-     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-        font-weight: 300;
-      }
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
+}
+
+.svg-container {
+  border: 1px solid #ccc;
+}
